# snowflake-claude-code

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  release.yml  semgrep.yml
docs/: architecture.d2
snowflake_claude_code/: auth.py  cli.py  config.py  proxy.py  translate.py
tests/: test_config.py  test_proxy.py  test_translate.py
