[project]
name = "snowflake-claude-code"
version = "1.0.1"
description = "Run Claude Code against Claude models hosted on Snowflake Cortex."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dylan Murray" }]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "snowflake", "cortex", "llm", "anthropic", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "snowflake-connector-python[secure-local-storage]>=3.5.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "snowflake>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/dylan-murray/snowflake-claude-code"
Repository = "https://github.com/dylan-murray/snowflake-claude-code"
Issues = "https://github.com/dylan-murray/snowflake-claude-code/issues"

[project.scripts]
snowflake-claude-code = "snowflake_claude_code.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults (typer Option pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
